hphp/test/zend/bad/ext/standard/tests/general_functions/bug49692.php
<?php

var_dump(parse_ini_file('bug49692.ini', true));

?>